Fixes the vertical scrollbar
The vertical scroll bar will always be visiblw now.
This should prevent horizontal flicker when changing views.

--- a/podstation.css
+++ b/podstation.css
@@ -3,6 +3,7 @@ body {
 	width: 1000px;
 	margin-left: auto;
 	margin-right: auto;
+	overflow-y: scroll;
 }
 
 a {
